resources/css/style.css
h1 {
    color: black;
    width: 100%;
    font-size: 96px;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
    }

h2 {
    font-size: 48px;
    width: 100%;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

p {
    width: 400px;
    text-align: left;
    margin-left: auto;
    margin-right: auto;
}

nav {
    background-color: lightskyblue;
}

img {
    border-width: 2px;
    border-style: solid;
    border-color: black;
    width: 400px;
    height: 400px;
}

main {
    text-align: center;
    margin-left: auto;
    margin-right: auto;   
}

#toys {
    display: inline-block;
    height: 100px;
}

#toys img {
    height: 100px;
 
} 

